--- a/Web.config
+++ b/Web.config
@@ -7,6 +7,11 @@
 
 <configuration>
 
+    
+    <connectionStrings>
+        <add name="MI_RRHHConnectionString" connectionString="Data Source=DESKTOP-NCPOBRK;Initial Catalog=MI_RRHH;Integrated Security=True;Pooling=False"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <system.web>
       <compilation debug="true" targetFramework="4.7.2"/>
       <httpRuntime targetFramework="4.7.2"/>
