--- a/Web.config
+++ b/Web.config
@@ -9,7 +9,7 @@
 
     
     <connectionStrings>
-        <add name="MI_RRHHConnectionString" connectionString="Data Source=DESKTOP-NCPOBRK;Initial Catalog=MI_RRHH;Integrated Security=True;Pooling=False"
+        <add name="Mi_RRHHConnectionString1" connectionString="Data Source=DESKTOP-N5CF6I7\SQLEXPRESS;Initial Catalog=Mi_RRHH;Integrated Security=True;Pooling=False"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <system.web>
